--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background-color: white;
+  color: black;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px; }
@@ -16,12 +16,12 @@ pre {
   font-size: 11px; }
 
 a {
-  color: #000;
+  color: black;
   &:visited {
-    color: #666; }
+    color: black; }
   &:hover {
-    color: #fff;
-    background-color: #000; } }
+    color: #00FFCC;
+    background-color: blue; } }
 
 div {
   &.field, &.actions {
