--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -17,6 +17,6 @@
     <%= f.text_field :name %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Add New Location" %>
   </div>
 <% end %>
