--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@map) do |f| %>
+<%= form_for(@map, :remote => true )  do |f| %>
   <% if @map.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@map.errors.count, "error") %> prohibited this map from being saved:</h2>
