--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -13,8 +13,8 @@
 <% @maps.each do |map| %>
   <tr>
     <td><%= map.name %></td>
-    <td><%= map.latitude %></td>
-    <td><%= map.longitude %></td>
+    <td><%= map.latitude.round(4) %></td>
+    <td><%= map.longitude.round(4) %></td>
     <td><%= link_to 'Show', map %></td>
     <td><%= link_to 'Edit', edit_map_path(map) %></td>
     <td><%= link_to 'Destroy', map, confirm: 'Are you sure?', method: :delete %></td>
