--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,3 +1,5 @@
+
+
 body {
   background-color: white;
   color: black;
@@ -5,10 +7,12 @@ body {
   font-size: 13px;
   line-height: 18px; }
 
-p, ol, ul, td {
+p, ol, ul, td, a {
+  
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
-  line-height: 18px; }
+  line-height: 18px;
+  text-decoration: none;	}
 
 pre {
   background-color: #eee;
