--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -25,6 +25,6 @@
 <%= render 'form' %><p>
 
 <ul id="markers_list"> 
-<%= gmaps4rails(@markers, false, false) %>
+<%= gmaps4rails(@markers) %>
 </ul> 
 </p>
